--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "node-gtts": "^2.0.2",
     "node-webpmux": "^3.1.1",
     "node-os-utils": "^1.3.6",
+    "node-cache": "^5.1.2",
     "openai": "^3.3.0",
     "pdfkit": "^0.13.0",
     "pino": "^7.8.0",
