--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@whiskeysockets/baileys": "github:ds6/bails",
+    "@whiskeysockets/baileys": "git+ssh://git@github.com/BrunoSobrino/Baileys-Itsukichann.git",
     "@adiwajshing/keyed-db": "^0.2.4",
     "puppeteer": "24.3.0",
     "@bochilteam/scraper": "^5.0.1",
