--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@whiskeysockets/baileys": "git+ssh://git@github.com/BrunoSobrino/Baileys-Itsukichann.git",
+    "@whiskeysockets/baileys": "github:EdderBot02/bail",
     "@adiwajshing/keyed-db": "^0.2.4",
     "puppeteer": "24.3.0",
     "@bochilteam/scraper": "^5.0.1",
@@ -48,6 +48,7 @@
     "mathjs": "^11.3.0",
     "p-queue": "^8.1.0",
     "body-parser": "^1.20.2",
+    "canvacord": "^5.4.8",
     "cfonts": "^3.3.0",
     "chalk": "^5.4.1",
     "cheerio": "1.0.0-rc.12",
@@ -101,5 +102,8 @@
   "devDependencies": {
     "eslint": "^8.45.0",
     "eslint-config-google": "^0.14.0"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
